--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
         </dependency>
 
 
+        <!-- Validator -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+
         <!-- Hibernate Validator -->
         <dependency>
             <groupId>org.hibernate</groupId>
