--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -51,7 +51,7 @@
 
     <filter-mapping>
         <filter-name>characterEncodingFilter</filter-name>
-        <url-pattern>/pages/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <filter-mapping>
