--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Dependencies -->
-        <dandelion.datatables.version>0.9.2</dandelion.datatables.version>
         <spring.version>3.2.4.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <jackson.version>1.9.13</jackson.version>
+        <dandelion.datatables.version>0.9.2</dandelion.datatables.version>
+        <thymeleaf.version>2.0.18</thymeleaf.version>
+        <thymeleaf.layout.version>1.1.3</thymeleaf.layout.version>
     </properties>
 
 
@@ -124,11 +126,11 @@
             <version>${jackson.version}</version>
         </dependency>
 
-
+        <!-- Thymeleaf -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring3</artifactId>
-            <version>2.0.18</version>
+            <version>${thymeleaf.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -138,11 +140,16 @@
         </dependency>
 
         <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${thymeleaf.layout.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
         </dependency>
-
 
         <dependency>
             <groupId>com.h2database</groupId>
