--- a/src/main/resources/datatables.properties
+++ b/src/main/resources/datatables.properties
@@ -18,3 +18,4 @@ i18n.message.resolver=com.github.dandelion.datatables.extras.spring3.i18n.Spring
 msg.lengthMenu=每页 _MENU_ 条
 global.msg.info.filtered=
 
+global.feature.filterplaceholder=none
